Transition fix for slightly misaligned exiting page

--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -16,8 +16,7 @@
 .slide-exit {
   position: absolute;
   top: 0;
-  left: 200;
-  width: 1080px;
+  margin-right: 20px;
   transform: translateY(0%);
 }
 
